[package]
name = "smart-messroom-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = {version = "^1.3", features = ["fltk-bundled"] }
fltk-theme = "0.4.2"
fltk-evented = { version = "0.2", features = ["tokio"] }


hd44780-hal = "0.2.1"
linux-embedded-hal = "0.2"
embedded-hal = "0.2.7"

nb = "1.0.0"
rppal = { version = "0.12.0", features = ["hal"] }
hx711_spi = "0.3.1"

preferences = "^1.0.0"
serde_derive = "0.9"
serde = "0.9"
app_dirs = "1.2.1"

ntex-mqtt = "0.8.7"

ntex = { version = "0.5.21", features = ["tokio", "rustls", "openssl"] }
env_logger = "0.9.0"
log = "0.4.17"
openssl = "0.10"

byte_string = "1.0.0"

tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }

